--- a/BT2_Socket/app/build.gradle
+++ b/BT2_Socket/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'vn.iotstar.bt1_uploadfile'
+    namespace 'vn.iotstar.socket'
     compileSdk 35
 
     defaultConfig {
-        applicationId "vn.iotstar.bt1_uploadfile"
+        applicationId "vn.iotstar.socket"
         minSdk 24
         targetSdk 35
         versionCode 1
@@ -38,17 +38,5 @@ dependencies {
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
 
-    // Retrofit để gọi API
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-    // Gson để xử lý JSON
-    implementation 'com.google.code.gson:gson:2.10.1'
-
-    // Glide để load ảnh
-    implementation 'com.github.bumptech.glide:glide:4.14.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
-
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+    implementation "androidx.core:core:1.12.0"
 }
